# DesignerHelper

./: CMakeLists.txt
Counter/: CMakeLists.txt  Counter_global.h  counter.cpp  counter.h  dialogdetailcounter.cpp  dialogdetailcounter.h  dialogdetailcounter.ui  refillform.cpp  refillform.h  refillform.ui  refillrequest.cpp  refillrequest.h  refillrequest.ui
DesignUtil/: CMakeLists.txt  DesignUtil_global.h  designutil.cpp  designutil.h
Nomorator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Nomorator/src/: minmaxspinbox.cpp  minmaxspinbox.h  ncontroller.cpp  ncontroller.h  nomorator.cpp  nomorator.h  nomoratorscene.cpp  nomoratorscene.h  nomoratorview.cpp  nomoratorview.h
PolaroidMaker/: CMakeLists.txt  PolaroidMaker_global.h  exportworker.cpp  exportworker.h  gammaeditordialog.cpp  gammaeditordialog.h  gammaeditordialog.ui  gammaworker.cpp  gammaworker.h  polaroid.cpp  polaroid.h  polaroidlistmodel.cpp  polaroidlistmodel.h  polaroidmaker.cpp  polaroidmaker.h  polaroidmakerns.h  polaroidmakerwidget.cpp  polaroidmakerwidget.h  polaroidmakerwidget.ui  polaroidpropdialog.cpp  polaroidpropdialog.h  polaroidpropdialog.ui  savedialog.cpp  savedialog.h  savedialog.ui  sizetemplatedialog.cpp  sizetemplatedialog.h  sizetemplatedialog.ui  sizetemplatemodel.cpp  sizetemplatemodel.h  updater.cpp  updater.h
PolaroidUi/: CMakeLists.txt  main.cpp
PolaroidUi/res/: polmakerui.rc
